--- a/nginx1.14/Dockerfile
+++ b/nginx1.14/Dockerfile
@@ -133,23 +133,9 @@ RUN GPG_KEYS=B0F4253373F8F6F510D42178520A9993A1C052F8 \
 	&& apk add --no-cache --virtual .nginx-rundeps $runDeps \
 	&& apk del .build-deps \
 	&& apk del .gettext \
-	&& mv /tmp/envsubst /usr/local/bin/ \
-	
-	# cancel write log to stdout and stderr 
-	# cancel TZ 
-	#\
-	# Bring in tzdata so users could set the timezones through the environment
-	# variables
-	#&& apk add --no-cache tzdata \
-	#\
-	# forward request and error logs to docker log collector
-	#&& ln -sf /dev/stdout /var/log/nginx/access.log \
-	#&& ln -sf /dev/stderr /var/log/nginx/error.log
-
-	
+	&& mv /tmp/envsubst /usr/local/bin/
 
 COPY nginx.conf /usr/local/nginx/nginx.conf
-#COPY nginx.vh.default.conf /usr/local/nginx/conf.d/default.conf
 
 VOLUME  /var/log/nginx
 
