--- a/nginx1.14/nginx.conf
+++ b/nginx1.14/nginx.conf
@@ -62,16 +62,16 @@ server {
             #allow 127.0.0.1;
             #deny all;
         }
-        location /phpstatus {
-            stub_status on;
-            access_log   off;
-            fastcgi_pass        phpfpm:9000;
-            fastcgi_index       index.php;
-            include             fastcgi_params;
-            fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        #location /phpstatus {
+        #    stub_status on;
+        #    access_log   off;
+        #    fastcgi_pass        phpfpm:9000;
+        #    fastcgi_index       index.php;
+        #    include             fastcgi_params;
+        #    fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
             #allow 127.0.0.1;
             #deny all;
-        }
+        #}
   }
 
       include /etc/nginx/conf.d/*.conf;
