--- a/phpfpm7.1.20/Dockerfile
+++ b/phpfpm7.1.20/Dockerfile
@@ -3,9 +3,9 @@ FROM alpine:3.7
 MAINTAINER Jiang Jiang <jiangjiang@xdf.cn>
 
 # Chinese network optimize
-RUN echo 'http://mirrors.ustc.edu.cn/alpine/v3.7/main' > /etc/apk/repositories \ 
-    && echo 'http://mirrors.ustc.edu.cn/alpine/v3.7/community' >>/etc/apk/repositories \
-    && apk update RUN apk add tzdata 
+RUN echo 'http://mirrors.aliyun.com/alpine/v3.7/main/' > /etc/apk/repositories \
+&& echo 'http://mirrors.aliyun.com/alpine/v3.7/community/' >>/etc/apk/repositories \
+&& apk update RUN apk add tzdata 
 
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
     && echo "Asia/Shanghai" > /etc/timezone
@@ -23,7 +23,12 @@ ENV PHPIZE_DEPS \
 		libc-dev \
 		make \
 		pkgconf \
-		re2c
+		re2c \
+		jpeg \
+        libjpeg \
+        libpng \
+        libpng-dev \
+        \
 
 # persistent / runtime deps
 RUN apk add --no-cache --virtual .persistent-deps \
