--- a/phpfpm7.1.20/Dockerfile
+++ b/phpfpm7.1.20/Dockerfile
@@ -37,6 +37,7 @@ ENV PHPIZE_DEPS \
         # for intl extension
         icu-dev \
         gettext \
+        gettext-dev \
         curl-dev
 
 # persistent / runtime deps
