--- a/phpfpm7.1.20/Dockerfile
+++ b/phpfpm7.1.20/Dockerfile
@@ -214,7 +214,7 @@ RUN set -xe \
 	&& rm -rf /tmp/pear ~/.pearrc
 
 COPY docker-php-ext-* docker-php-entrypoint /usr/local/bin/
-
+RUN chmod +x /usr/local/bin/docker-php-entrypoint
 VOLUME /var/log/php
 ENTRYPOINT ["/usr/local/bin/docker-php-entrypoint"]
 
